test/tests/stages/18_structures/invalid_types/initializers/nested_static_compound_initializer_too_long.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: inner
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: i
            Int: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: outer
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: foo
            Structure: 
              TIdentifier: inner
              Bool: 0
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        CCompoundInit: 
          List[1]: 
            CCompoundInit: 
              List[2]: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
              None: 
          None: 
        Structure: 
          TIdentifier: outer
          Bool: 0
        None: 
